// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prepareChartDesignOptions > should return design options for areamap chart 1`] = `
{
  "autoZoom": {
    "enabled": true,
  },
  "dataLimits": {
    "categoriesCapacity": 100000,
    "seriesCapacity": 50,
  },
  "funnelDirection": "regular",
  "funnelLabels": {
    "enabled": true,
    "showCategories": true,
    "showDecimals": false,
    "showPercent": true,
    "showValue": true,
  },
  "funnelSize": "regular",
  "funnelType": "regular",
  "indicatorComponents": {
    "labels": {
      "shouldBeShown": true,
    },
    "secondaryTitle": {
      "text": "",
    },
    "ticks": {
      "shouldBeShown": true,
    },
    "title": {
      "shouldBeShown": false,
      "text": "",
    },
  },
  "indicatorType": "numeric",
  "legend": {
    "enabled": true,
    "position": "bottom",
  },
  "lineType": "straight",
  "lineWidth": 2,
  "mapType": "world",
  "marker": {
    "enabled": false,
    "fill": "full",
    "size": "small",
  },
  "numericSubtype": "numericSimple",
  "pieType": "classic",
  "skin": "vertical",
  "stackType": "classic",
  "xAxis": {
    "enabled": true,
    "gridLine": true,
    "labels": true,
    "max": null,
    "min": null,
    "tickInterval": null,
    "title": "X Axis title",
    "titleEnabled": true,
    "type": "linear",
  },
  "yAxis": {
    "enabled": true,
    "gridLine": true,
    "labels": true,
    "max": null,
    "min": null,
    "tickInterval": null,
    "title": "Y Axis title",
    "titleEnabled": true,
    "type": "linear",
  },
}
`;

exports[`prepareChartDesignOptions > should return design options for combo "line + area" chart 1`] = `
{
  "autoZoom": {
    "enabled": true,
    "scrollerLocation": undefined,
  },
  "dataLimits": {
    "categoriesCapacity": 100000,
    "seriesCapacity": 50,
  },
  "designPerSeries": {
    "$measure1_Total Revenue": {
      "marker": {
        "enabled": true,
        "fill": "full",
        "size": "large",
      },
    },
  },
  "funnelDirection": "regular",
  "funnelLabels": {
    "enabled": true,
    "showCategories": true,
    "showDecimals": false,
    "showPercent": true,
    "showValue": true,
  },
  "funnelSize": "regular",
  "funnelType": "regular",
  "indicatorComponents": {
    "labels": {
      "shouldBeShown": true,
    },
    "secondaryTitle": {
      "text": "",
    },
    "ticks": {
      "shouldBeShown": true,
    },
    "title": {
      "shouldBeShown": false,
      "text": "",
    },
  },
  "indicatorType": "numeric",
  "legend": {
    "enabled": true,
    "position": "bottom",
  },
  "line": {
    "dashStyle": undefined,
    "endCap": undefined,
    "shadow": undefined,
    "width": 1,
  },
  "lineType": "straight",
  "lineWidth": 2,
  "marker": {
    "enabled": true,
    "fill": "hollow",
    "size": "small",
  },
  "numericSubtype": "numericSimple",
  "pieType": "classic",
  "seriesLabels": {
    "enabled": true,
    "rotation": -90,
  },
  "skin": "vertical",
  "stackType": "classic",
  "xAxis": {
    "enabled": true,
    "gridLine": false,
    "labels": true,
    "max": null,
    "min": null,
    "tickInterval": null,
    "title": "X Axis title",
    "titleEnabled": false,
    "type": "linear",
  },
  "yAxis": {
    "enabled": true,
    "gridLine": true,
    "labels": true,
    "max": null,
    "min": null,
    "tickInterval": null,
    "title": "AVG COST",
    "titleEnabled": true,
    "type": "linear",
  },
}
`;

exports[`prepareChartDesignOptions > should return design options for funnel chart 1`] = `
{
  "autoZoom": {
    "enabled": true,
  },
  "dataLimits": {
    "categoriesCapacity": 50000,
    "seriesCapacity": 3,
  },
  "funnelDirection": "regular",
  "funnelLabels": {
    "enabled": true,
    "showCategories": true,
    "showDecimals": true,
    "showPercent": true,
    "showValue": true,
  },
  "funnelSize": "regular",
  "funnelType": "regular",
  "indicatorComponents": {
    "labels": {
      "shouldBeShown": true,
    },
    "secondaryTitle": {
      "text": "",
    },
    "ticks": {
      "shouldBeShown": true,
    },
    "title": {
      "shouldBeShown": false,
      "text": "",
    },
  },
  "indicatorType": "numeric",
  "legend": {
    "enabled": true,
    "position": "left",
  },
  "lineType": "straight",
  "lineWidth": 2,
  "marker": {
    "enabled": false,
    "fill": "full",
    "size": "small",
  },
  "numericSubtype": "numericSimple",
  "pieType": "classic",
  "skin": "vertical",
  "stackType": "classic",
  "xAxis": {
    "enabled": true,
    "gridLine": true,
    "labels": true,
    "max": null,
    "min": null,
    "tickInterval": null,
    "title": "X Axis title",
    "titleEnabled": true,
    "type": "linear",
  },
  "yAxis": {
    "enabled": true,
    "gridLine": true,
    "labels": true,
    "max": null,
    "min": null,
    "tickInterval": null,
    "title": "Y Axis title",
    "titleEnabled": true,
    "type": "linear",
  },
}
`;

exports[`prepareChartDesignOptions > should return design options for scattermap chart 1`] = `
{
  "autoZoom": {
    "enabled": true,
  },
  "dataLimits": {
    "categoriesCapacity": 100000,
    "seriesCapacity": 50,
  },
  "funnelDirection": "regular",
  "funnelLabels": {
    "enabled": true,
    "showCategories": true,
    "showDecimals": false,
    "showPercent": true,
    "showValue": true,
  },
  "funnelSize": "regular",
  "funnelType": "regular",
  "indicatorComponents": {
    "labels": {
      "shouldBeShown": true,
    },
    "secondaryTitle": {
      "text": "",
    },
    "ticks": {
      "shouldBeShown": true,
    },
    "title": {
      "shouldBeShown": false,
      "text": "",
    },
  },
  "indicatorType": "numeric",
  "legend": {
    "enabled": true,
    "position": "bottom",
  },
  "lineType": "straight",
  "lineWidth": 2,
  "marker": {
    "enabled": false,
    "fill": "full",
    "size": "small",
  },
  "markers": {
    "enabled": false,
    "fill": "hollow-bold",
    "size": "small",
  },
  "numericSubtype": "numericSimple",
  "pieType": "classic",
  "skin": "vertical",
  "stackType": "classic",
  "xAxis": {
    "enabled": true,
    "gridLine": true,
    "labels": true,
    "max": null,
    "min": null,
    "tickInterval": null,
    "title": "X Axis title",
    "titleEnabled": true,
    "type": "linear",
  },
  "yAxis": {
    "enabled": true,
    "gridLine": true,
    "labels": true,
    "max": null,
    "min": null,
    "tickInterval": null,
    "title": "Y Axis title",
    "titleEnabled": true,
    "type": "linear",
  },
}
`;

exports[`prepareChartDesignOptions > should throw an error if internal data options is not compatible with chart type (for restructured charts) 1`] = `[Error: Data options are not correctly converted for 'column' chart]`;

exports[`prepareChartDesignOptions > should throw an error if style options is not compatible with chart type (for restructured charts) 1`] = `[Error: Invalid style options for 'column' chart]`;
